# filtr

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  predicate.rs  tree.rs
