[package]
name = "filtr"
version = "0.1.0"
edition = "2024"
authors = ["extremeandy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/extremeandy/filtr"
description = "Data structures and tools for representing and evaluating predicate trees"
readme = "README.md"

[dependencies]
derive_more = { version = "2.0.0", features = ["display"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde"]
